// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpdateReplyModal /> should render correctly with minimal props 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="large"
  className="reply__modal--show"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="show-reply-modal-UmVwbHk6cmVwbHky"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="reply.show.link"
        values={
          Object {
            "date": <FormattedDate
              day="numeric"
              month="long"
              value={"2016-04-25T12:33:17.000Z"}
              year="numeric"
            />,
            "time": <FormattedDate
              hour="numeric"
              minute="numeric"
              value={"2016-04-25T12:33:17.000Z"}
            />,
          }
        }
      />
      <ForwardRef(Relay(Connect(UnpublishedLabel)))
        publishable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "createdAt": "2016-03-01 12:26:24",
            "draft": false,
            "id": "UmVwbHk6cmVwbHky",
            "publishedAt": "2016-04-25 14:33:17",
            "questionnaire": Object {
              "$fragmentRefs": null,
            },
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <ForwardRef(Relay(Connect(injectIntl(ReduxForm))))
      onClose={[Function]}
      questionnaire={
        Object {
          "$fragmentRefs": null,
        }
      }
      reply={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "createdAt": "2016-03-01 12:26:24",
          "draft": false,
          "id": "UmVwbHk6cmVwbHky",
          "publishedAt": "2016-04-25 14:33:17",
          "questionnaire": Object {
            "$fragmentRefs": null,
          },
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<UpdateReplyModal /> should render correctly with replies 1`] = `
<Modal
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  bsSize="large"
  className="reply__modal--show"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="show-reply-modal-UmVwbHk6cmVwbHky"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="reply.show.link"
        values={
          Object {
            "date": <FormattedDate
              day="numeric"
              month="long"
              value={"2016-03-01T11:26:24.000Z"}
              year="numeric"
            />,
            "time": <FormattedDate
              hour="numeric"
              minute="numeric"
              value={"2016-03-01T11:26:24.000Z"}
            />,
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <ForwardRef(Relay(Connect(injectIntl(ReduxForm))))
      onClose={[Function]}
      questionnaire={
        Object {
          "$fragmentRefs": null,
        }
      }
      reply={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "createdAt": "2016-03-01 12:26:24",
          "draft": true,
          "id": "UmVwbHk6cmVwbHky",
          "publishedAt": null,
          "questionnaire": Object {
            "$fragmentRefs": null,
          },
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
  </ModalFooter>
</Modal>
`;
